Complete the Odin-recipes project
Added Index page & links to several recipes

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <meta charset="UTF-8">
         <title> Odin recipes</title>
     </head>
-    <body>
-        <h1> Odin Recipes</h1>
-        <ol>
-            <li><a href="./recipes/lasagna.html"> Italian Lasagna Recipe</a></li>
-            <li><a href="./recipes/biryani.html"> Biryani Recipe</a></li>
-            <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-        </ol>
+    <body style="text-align: center; background-color: rgb(245, 234, 208);" >
+        <div id="Wrapper">
+            <div id="Header">
+                <h1> Odin Recipes</h1>
+            </div>
+        <div>
+            <ol style="display: inline-block;font-size: 30px;">
+                <li><a href="./recipes/biryani.html"> Chicken Biryani Recipe</a></li>
+                <p></p>
+                <li><a href="./recipes/lasagna.html" >Italian Lasagna Recipe</a></li>
+            </ol>
+        </div>
+    </div>
     </body>
 </html>
