--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -2,15 +2,97 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Lasagna</title>
+        <title> Chicken Biryani</title>
     </head>
-    <body style="text-align: center; background-color: rgb(245, 234, 208);" >
-        <h1 style="font-size: 80px;"> Italian Lasagna</h1>
-        <img src="../images/Italian Lasagna.webp" />
+    <body style="background-color: rgb(245, 234, 208);" >
+ <div id="wrapper">
+    <div id="header">
+        <h1 style="font-size: 80px; text-align: center;"> Chicken Biryani</h1>
+    </div>
+    <div style="text-align: center;">
+    <img  src="../images/Chicken Biryani.webp"  />
+    </div>
+     <div id=" igredients" style="margin-left: 22.5%;">
         <h2> Ingredients:</h2>
-        <ul>
-            <li style="text-align: center;">9 thick slices bacon, diced</li>
-            <li>1 medium onion, chopped</li>
+        <ul style="display: inline-block;text-align: left;" >
+        <li >4 tablespoons vegetable oil, divided</li>
+        <li>4 small potatoes, peeled and halved</li>
+        <li>2 large onions, finely chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 tablespoon minced fresh ginger root</li>
+        <li>2 medium tomatoes, peeled and chopped</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>½ teaspoon chili powder</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>½ teaspoon ground turmeric</li>
+        <li>2 tablespoons plain yogurt</li>
+        <li>2 tablespoons chopped fresh mint leaves</li>
+        <li>½ teaspoon ground cardamom</li>
+        <li>1 (2 inch) piece cinnamon stick</li>
+        <li>3 pounds boneless, skinless chicken pieces cut into chunks</li>
         </ul>
+        <h2>Rice:</h2>
+        <ul style="display: inline-block; text-align: left;">
+            <li>1 pound basmati rice</li>
+            <li>2 ½ tablespoons vegetable oil</li>
+            <li>1 large onion, diced</li>
+            <li>5 pods cardamom</li>
+            <li>3 whole cloves</li>
+            <li>1 (1 inch) piece cinnamon stick</li>
+            <li>½ teaspoon ground ginger</li>
+            <li>1 pinch powdered saffron</li>
+            <li>4 cups chicken stock</li>
+            <li>1 ½ teaspoons salt</li>
+        </ul>
+     </div>
+     <div id="Directions" style="margin-left: 22.5%;">
+        <h1>Directions</h1>
+        <h2>Step 1</h2>
+        <p>Gather all ingredients.</p>
+        <img src="../images/Step1.webp">
+        <p></p>
+        <h2>Step 2</h2>
+        <p style="width: 750px;">Heat 2 tablespoons of oil in a large skillet. Fry potatoes in hot oil until lightly browned, about 3 to 5 minutes. Remove to a paper towel-lined plate to drain; set aside</p>
+        <img src="../images/Step2.webp">
+        <p></p>
+        <h2>Step 3</h2>
+        <p style="width: 750px;">Add remaining 2 tablespoons of oil to the skillet. Add onions, garlic, and fresh ginger; cook and stir until onion is soft and golden. Add tomatoes, salt, cumin, chili powder, pepper, and turmeric; cook, stirring constantly, for 5 minutes.</p>
+        <img src="../images/Step3.webp">
+        <p></p>
+        <h2>Step 4</h2>
+        <p style="width: 750px;">Stir in yogurt, mint, ground cardamom, and cinnamon stick. Cover and cook over low heat, stirring occasionally, until tomatoes are cooked to a pulp. It may be necessary to add a little hot water if mixture becomes too dry and starts to stick to the pan.</p>
+        <img src="../images/Step4.webp">
+        <p></p>
+        <h2>Step 5</h2>
+        <p style="width: 750px;">Add chicken and stir well to coat. Cover and cook over very low heat until chicken is tender, 35 to 45 minutes. There should only be a little very thick gravy left when chicken is finished cooking. If necessary cook uncovered for a few minutes to reduce the gravy.</p>
+        <img src="../images/Step5.webp">
+        <p></p>
+        <h2>Step 6</h2>
+        <p>Meanwhile, make the rice: Wash rice well and drain in a colander for at least 30 minutes.</p>
+        <img src="../images/Step6.webp">
+        <p></p>
+        <h2>Step 7</h2>
+        <p style="width: 800px;">Heat oil in a large skillet. Add onion; cook and stir until golden. Add cardamom pods, cloves, cinnamon stick, ground ginger, and saffron; stir in rice until coated with spices.</p>
+        <img src="../images/Step7.webp">
+        <p></p>
+        <h2>Step 8</h2>
+        <p>Heat stock and salt in a medium pot until hot; pour over rice and stir well.</p>
+        <img src="../images/Step8.webp">
+        <p></p>
+        <h2>Step 9</h2>
+        <p>Add chicken mixture and potatoes; stir gently to combine. Bring to a boil.</p>
+        <img src="../images/Step9.webp">
+        <p></p>
+        <h2>Step 10</h2>
+        <p>Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or stirring.</p>
+        <img src="../images/Step10.webp">
+        <p></p>
+        <h2>Step 11</h2>
+        <p>Spoon biryani onto a warm serving dish.</p>
+        <img src="../images/Step11.webp">
+        <p></p>
+     </div>
+</div>
     </body>
 </html>
