--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,15 +2,39 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Lasagna</title>
+        <title>Italian Lasagna</title>
     </head>
     <body style="text-align: center; background-color: rgb(245, 234, 208);" >
+ <div id="wrapper">
+    <div id="header">
         <h1 style="font-size: 80px;"> Italian Lasagna</h1>
-        <img src="../images/Italian Lasagna.webp" />
+    </div>
+    <img  src="../images/Italian Lasagna.webp" />
+     <div id=" igredients">
         <h2> Ingredients:</h2>
-        <ul>
-            <li style="text-align: center;">9 thick slices bacon, diced</li>
-            <li>1 medium onion, chopped</li>
+        <ul style="display: inline-block; text-align: left;" >
+        <li >9 thick slices bacon, diced</li>
+        <li>1 medium onion, chopped</li>
+        <li>2 (28 ounce) cans tomato sauce</li>
+        <li>1 ½ teaspoons Italian seasoning</li>
+        <li>1 teaspoon fennel seed</li>
+        <li>1 teaspoon dried oreganod</li>
+        <li>2 pounds Italian sausage links</li>
         </ul>
+     </div>
+     <div id="Directions">
+        <h1>Directions</h1>
+        <h2>Step 1</h2>
+        <p>Make the sauce: Brown bacon and onion in a large pan over medium heat until bacon is crisp and onion is translucent, 7 to 9 minutes. Stir in tomato sauce, Italian seasoning, fennel seed, and oregano. Reduce the heat to low, cover, and simmer until thick, 4 to 6 hours.</p>
+        <h2>Step 2</h2>
+        <p>Cook the sausage: When the sauce is almost ready, brown sausage links in a large skillet. Drain on paper towels and cut into 1-inch pieces.</p>
+        <h2>Step 3</h2>
+        <p>Make the lasagna: Mix ricotta cheese, milk, eggs, parsley, and oregano together in a medium bowl.</p>
+        <h2>Step 4</h2>
+        <p>Spread 1 cup sauce over the bottom of a 9x13-inch pan. Layer with 1/3 of the lasagna noodles, 1/2 of the ricotta mixture, 1/2 of the sausage pieces, 2 cups mozzarella, 4 slices provolone, and 1/3 of the sauce. Repeat layers once more, then top with remaining noodles. Spread remaining sauce over noodles and sprinkle with remaining mozzarella.</p>
+        <h2>Step 5</h2>
+        <p>Bake in the preheated oven for 1 1/2 hours.</p>
+     </div>
+</div>
     </body>
 </html>
